log/build_2023-10-16_16-49-36/tb3_controller/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/tahhhhm/METR4202/install/tb3_controller/lib/python3.10/site-packages/tb3_controller/turtlebot_brain.py", line 87
    self.mapArray2d = np.reshape(msg.data, (-1, msg.info.width)
                                ^
SyntaxError: '(' was never closed

